PROJECT(Anthropometric3DModel)
# Cmake needs some version information
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# Cmake also needs some policy
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 OLD)
ENDIF(COMMAND CMAKE_POLICY)

set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE)

MESSAGE( STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}" )
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules") 


IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
	SET(OpenCV_DIR $ENV{OPENCV_DIR}) 
ELSEIF(CMAKE_BUILD_TYPE STREQUAL "Release")
	SET(OpenCV_DIR $ENV{OPENCV_DIR}) 
ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")


MESSAGE(STATUS "OpenCV_DIR: ${OpenCV_DIR}")
FIND_PACKAGE( OpenCV REQUIRED )
MESSAGE(STATUS "OpenCV include dirs: ${OpenCV_INCLUDE_DIRS}")
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

FIND_PACKAGE( GLUT REQUIRED )
INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})

SET(SRC_FILES glAnthropometric3DModel.cpp)
SET(LINK_LIBS ${OPENGL_LIBRARIES} ${OpenCV_LIBS} ${GLUT_LIBRARIES})

SET(EXEC_NAME "glAnthropometric3DModel")
ADD_EXECUTABLE(${EXEC_NAME}  ${SRC_FILES} )
TARGET_LINK_LIBRARIES(${EXEC_NAME} ${LINK_LIBS} )
SET_TARGET_PROPERTIES(${EXEC_NAME} PROPERTIES DEBUG_POSTFIX d)

